bk_ida/gccida/c3/ix86_sched_reorder_ppro
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_sched_reorder_ppro/src/i386.c:10935:1: error: must use 'enum' tag to refer to type 'attr_ppro_uops'
attr_ppro_uops cur_uops; // [rsp+1Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_sched_reorder_ppro/src/i386.c:10936:1: error: must use 'enum' tag to refer to type 'attr_ppro_uops'
attr_ppro_uops cur_uopsa; // [rsp+1Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_sched_reorder_ppro/src/i386.c:10943:12: error: expected expression
*( _OWORD *)decode = *( _OWORD *)ix86_sched_data.ppro.decode; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_sched_reorder_ppro/src/i386.c:10943:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)decode = *( _OWORD *)ix86_sched_data.ppro.decode; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_sched_reorder_ppro/src/obj/i386.o] Error 1
